CI: run analyze step in CI

--- a/.buildkite/test_only_pipeline.yml
+++ b/.buildkite/test_only_pipeline.yml
@@ -6,5 +6,6 @@ steps:
       - "flutter pub get"
       - "flutter pub run build_runner build --delete-conflicting-outputs"
       - "make junit"
+      - "make analyze"
     agents:
       os: "macOS"
