--- a/.github/workflows/flutter-test.yml
+++ b/.github/workflows/flutter-test.yml
@@ -10,6 +10,8 @@ jobs:
     name: Flutter Test on Linux
     runs-on: ubuntu-latest
     steps:
+      - name: Install libraries
+        run: sudo apt-get install network-manager
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
