Aggregate time by week

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.113+1168
+version: 0.8.113+1169
 
 msix_config:
   display_name: Lotti
@@ -143,6 +143,7 @@ dependencies:
   url_launcher: ^6.1.2
   uuid: ^3.0.4
   wechat_assets_picker: ^7.0.1
+  week_of_year: ^2.0.0
   window_manager: ^0.2.0
   yaml: ^3.1.0
 
