--- a/.github/workflows/flutter-test.yml
+++ b/.github/workflows/flutter-test.yml
@@ -10,12 +10,14 @@ jobs:
     name: Flutter Test on Linux
     runs-on: ubuntu-latest
     steps:
+      - name: Update apt-get
+        run: sudo apt-get update
       - name: Install libraries
         run: sudo apt-get install network-manager
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
         with:
-          flutter-version: '3.0.2'
+          flutter-version: '3.0.5'
           channel: 'stable'
       - name: Run Flutter tests
         run: make clean_test
