Chore: update dependencies

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.128+1233
+version: 0.8.129+1240
 
 msix_config:
   display_name: Lotti
@@ -152,7 +152,7 @@ dependencies:
 dependency_overrides:
   analyzer: ^4.2.0
   connectivity_plus_windows: 1.2.2
-  device_info_plus: ^4.0.0
+  device_info_plus: 4.0.3
   rxdart: ^0.27.1
   very_good_analysis: ^3.0.1
   xml: ^5.3.1
