CI: split test and report steps

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -42,13 +42,27 @@ steps:
           automatic:
             - exit_status: 24
 
-      - label: "🔬 Test "
+      - label: "🔬 Test Coverage "
         key: "apple_test"
         depends_on:
           - "apple_codegen"
         commands:
           - "rsync -ar /tmp/buildkite/${BUILDKITE_COMMIT}/ ./"
-          - "make junit"
+          - "make junit_test"
+          - "rsync -ar ./ /tmp/buildkite/${BUILDKITE_COMMIT}/"
+        agents:
+          os: "macOS"
+        retry:
+          automatic:
+            - exit_status: 24
+
+      - label: "🔬 Test Report "
+        key: "apple_test_report"
+        depends_on:
+          - "apple_test"
+        commands:
+          - "rsync -ar /tmp/buildkite/${BUILDKITE_COMMIT}/ ./"
+          - "make junit_upload"
         agents:
           os: "macOS"
         retry:
