--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.150+1383
+version: 0.8.150+1384
 
 msix_config:
   display_name: Lotti
@@ -78,7 +78,7 @@ dependencies:
   flutter_native_timezone: ^2.0.0
   flutter_quill: ^6.0.0
   flutter_secure_storage: ^6.0.0
-  flutter_sliding_tutorial: ^1.1.3+3
+  flutter_sliding_tutorial: ^2.0.0
   flutter_sound: ^8.3.12
   flutter_svg: ^1.0.3
   flutter_typeahead: ^4.0.0
@@ -142,7 +142,7 @@ dependencies:
   syncfusion_flutter_calendar: ^20.1.47
   syncfusion_flutter_datepicker: ^20.1.47
   timezone: ^0.8.0
-  tinycolor2: ^2.0.0
+  tinycolor2: ^3.0.0
   tuple: ^2.0.0
   url_launcher: ^6.1.2
   uuid: ^3.0.4
