Design: icons in entry header

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.167+1473
+version: 0.8.168+1475
 
 msix_config:
   display_name: Lotti
@@ -194,6 +194,8 @@ flutter:
 
   assets:
     - assets/icons/
+    - assets/icons/card/
+    - assets/icons/editor/
     - assets/sqlite/
     # from https://www.iconfinder.com/paomedia
     - assets/images/map/299087_marker_map_icon.png
