--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.172+1487
+version: 0.8.172+1489
 
 msix_config:
   display_name: Lotti
@@ -19,7 +19,8 @@ environment:
 
 dependencies:
   adaptive_dialog: ^1.3.0
-  arb_utils: ^0.2.0
+  analyzer: ^5.1.0
+  arb_utils: ^0.3.0
   audio_video_progress_bar: ^0.10.0
   auto_size_text: ^3.0.0
   badges: ^2.0.2
@@ -43,7 +44,7 @@ dependencies:
       ref: be47a76
 
   device_info_plus: ^4.0.0
-  drift: ^2.0.2
+  drift: ^2.2.0
   easy_debounce: ^2.0.2+1
   encrypt: ^5.0.1
   enough_mail: ^2.0.0
@@ -158,6 +159,8 @@ dependencies:
   yaml: ^3.1.0
 
 dependency_overrides:
+  analyzer: ^5.1.0
+  arb_utils: ^0.3.0
   device_info_plus: 4.0.3
   rxdart: ^0.27.1
   xml: ^6.1.0
@@ -166,7 +169,7 @@ dev_dependencies:
   archive: ^3.1.6
   build_runner: ^2.2.0
   dart_code_metrics: ^4.8.1
-  drift_dev: ^2.0.2
+  drift_dev: ^2.2.0
   flutter_launcher_icons: ^0.10.0
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.1.3+1
