--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.203+1589
+version: 0.8.203+1591
 
 msix_config:
   display_name: Lotti
@@ -177,7 +177,7 @@ dev_dependencies:
   flutter_native_splash: ^2.1.3+1
   flutter_test:
     sdk: flutter
-  freezed: ^2.0.3
+  freezed: 2.2.1
   glados: ^1.1.1
   integration_test:
     sdk: flutter
