--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.217+1637
+version: 0.8.218+1638
 
 msix_config:
   display_name: Lotti
@@ -103,6 +103,7 @@ dependencies:
       ref: 918a45c
 
   hotkey_manager: ^0.1.6
+  infinite_scroll_pagination: ^3.2.0
   intersperse: ^2.0.0
   intl: ^0.17.0
   jiffy: ^5.0.0
