--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.226+1658
+version: 0.8.226+1662
 
 msix_config:
   display_name: Lotti
@@ -125,6 +125,7 @@ dependencies:
   photo_view: ^0.14.0
 
 #  qr_code_scanner: ^0.7.0
+  pull_to_refresh: ^2.0.0
   qr_code_scanner:
     git:
       url: https://github.com/xeinebiu/qr_code_scanner.git
