Add record library for audio recording on all platforms

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -47,5 +47,7 @@
 	<string>Import photos and videos</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>NSMicrophoneUsageDescription</key>
+    <string>Record audio notes</string>
 </dict>
 </plist>
