--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,7 +48,7 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>Obtain location for journal entries</string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Record audio and video</string>
+	<string>Record audio notes</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Import photos and videos</string>
 	<key>UIBackgroundModes</key>
