--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ msix_config:
   publisher_display_name: Matthias Nehlsen
   publisher: CN=Matthias Nehlsen, O=Matthias Nehlsen, C=DE
   identity_name: com.matthiasnehlsen.lotti
-  capabilities: internetClient, location, microphone, webcam
+  capabilities: internetClient, location, microphone
   languages: en-us, de-de, ro-ro
   install_certificate: false
   sign_msix: false
@@ -135,6 +135,7 @@ dependencies:
 
   # research_package: ^0.6.7
   random_password_generator: ^0.2.1
+  record: ^4.4.4
   research_package:
     git:
       url: https://github.com/matthiasn/research.package.git
