--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.252+1744
+version: 0.8.253+1746
 
 msix_config:
   display_name: Lotti
@@ -24,7 +24,7 @@ dependencies:
   assorted_layout_widgets: ^7.0.0
   audio_video_progress_bar: ^0.11.0
   auto_size_text: ^3.0.0
-  badges: ^2.0.2
+  badges: ^3.0.1
   beamer: ^1.5.2
   bloc: ^8.0.1
   bloc_test: ^9.0.1
@@ -71,15 +71,15 @@ dependencies:
   flutter_image_compress: ^1.1.0
   flutter_image_slideshow: ^0.1.2
   flutter_linkify: ^5.0.2
-  flutter_local_notifications: ^9.2.0
+  flutter_local_notifications: ^13.0.0
 
   flutter_localizations:
     sdk: flutter
 
-  flutter_map: ^2.2.0
+  flutter_map: ^3.1.0
   flutter_native_timezone: ^2.0.0
   flutter_quill: ^6.1.0
-  flutter_secure_storage: ^6.0.0
+  flutter_secure_storage: ^7.0.1
   flutter_sliding_tutorial: ^2.0.0
   flutter_svg: ^1.0.3
   form_builder_validators: ^8.1.1
@@ -106,14 +106,14 @@ dependencies:
   keyboard_dismisser: ^3.0.0
   latlong2: ^0.8.1
   location: ^4.3.0
-  lottie: ^1.2.2
-  material_design_icons_flutter: ^5.0.6595
+  lottie: ^2.2.0
+  material_design_icons_flutter: ^6.0.7096
   material_floating_search_bar: ^0.3.6
   modal_bottom_sheet: ^2.1.2
   multi_select_flutter: ^4.0.0
   package_info_plus: ^3.0.1
   path: ^1.8.1
-  path_provider: ^2.0.8
+  path_provider: 2.0.11
   path_provider_macos: 2.0.6
   permission_handler: ^10.0.0
   photo_view: ^0.14.0
@@ -142,12 +142,12 @@ dependencies:
 
   retry: ^3.1.0
   rxdart: ^0.27.7
-  share_plus: ^4.0.4
+  share_plus: ^5.0.0
   sqflite: ^2.0.1
   sqlite3_flutter_libs: ^0.5.2
   syncfusion_flutter_calendar: ^20.1.47
   syncfusion_flutter_datepicker: ^20.1.47
-  timezone: ^0.8.0
+  timezone: ^0.9.1
   tinycolor2: ^3.0.0
   tuple: ^2.0.0
   url_launcher: ^6.1.2
@@ -155,7 +155,7 @@ dependencies:
   visibility_detector: ^0.3.3
   wechat_assets_picker: ^8.0.0
   week_of_year: ^2.0.0
-  window_manager: ^0.2.0
+  window_manager: ^0.3.0
 
 dependency_overrides:
   analyzer: ^5.1.0
@@ -167,14 +167,14 @@ dependency_overrides:
 dev_dependencies:
   archive: ^3.3.0
   build_runner: ^2.3.0
-  dart_code_metrics: ^4.8.1
+  dart_code_metrics: ^5.5.0
   drift_dev: ^2.2.0
-  flutter_launcher_icons: ^0.10.0
+  flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.1
   flutter_native_splash: ^2.1.3+1
   flutter_test:
     sdk: flutter
-  freezed: 2.2.1
+  freezed: ^2.3.2
   glados: ^1.1.1
   integration_test:
     sdk: flutter
