Enable the Impeller rendering engine on iOS

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -84,5 +84,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>FLTEnableImpeller</key>
+    <true/>
 </dict>
 </plist>
