--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.267+1781
+version: 0.8.267+1782
 
 msix_config:
   display_name: Lotti
@@ -79,7 +79,7 @@ dependencies:
   flutter_map: ^3.1.0
   flutter_markdown: ^0.6.9+1
   flutter_native_timezone: ^2.0.0
-  flutter_quill: ^6.3.2
+  flutter_quill: ^6.4.3
   flutter_secure_storage: ^8.0.0
   flutter_sliding_tutorial: ^2.0.0
   flutter_svg: ^2.0.0
@@ -100,7 +100,7 @@ dependencies:
   hotkey_manager: ^0.1.6
   infinite_scroll_pagination: ^3.2.0
   intersperse: ^2.0.0
-  intl: ^0.17.0
+  intl: ^0.18.0
   jiffy: ^5.0.0
   json_annotation: ^4.6.0
   just_audio: ^0.9.12
@@ -119,7 +119,7 @@ dependencies:
   multi_select_flutter: ^4.0.0
   package_info_plus: ^3.0.1
   path: ^1.8.1
-  path_provider: 2.0.11
+  path_provider: ^2.0.12
   permission_handler: ^10.0.0
   photo_view: ^0.14.0
 
@@ -163,6 +163,7 @@ dependencies:
   window_manager: ^0.3.0
 
 dependency_overrides:
+  intl: ^0.18.0
   rxdart: ^0.27.1
   sprintf: ^7.0.0
   xml: ^6.1.0
@@ -174,7 +175,7 @@ dev_dependencies:
   drift_dev: ^2.2.0
   flutter_launcher_icons: ^0.11.0
   flutter_lints: ^2.0.1
-  flutter_native_splash: ^2.1.3+1
+  flutter_native_splash: ^2.2.16
   flutter_test:
     sdk: flutter
   freezed: ^2.3.2
