--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.8.269+1788
+version: 0.8.269+1789
 
 msix_config:
   display_name: Lotti
@@ -110,15 +110,8 @@ dependencies:
   path_provider: ^2.0.12
   permission_handler: ^10.0.0
   photo_view: ^0.14.0
-
-#  qr_code_scanner: ^0.7.0
-  qr_code_scanner:
-    git:
-      url: https://github.com/xeinebiu/qr_code_scanner.git
-      ref: fix_break_changes_platform
-
+  qr_code_scanner: ^1.0.1
   qr_flutter: ^4.0.0
-
   quiver: ^3.2.1
   radial_button:
     git:
