Test: add habit completion in test flow

--- a/test_flows/habit_flow.yaml
+++ b/test_flows/habit_flow.yaml
@@ -31,7 +31,7 @@ description: Simple habit flow
 - writeText: 'Floss AM'
 - pressOn: 'Select category'
 - pressOn: 'Dental Health'
-- takeScreenshot: '/tmp/lotti/habit2.png'
+- takeScreenshot: '/tmp/lotti/habit1.png'
 - pressOn: 'Save Habit'
 
 - pressOn: 'Add Habit'
@@ -43,5 +43,23 @@ description: Simple habit flow
 - takeScreenshot: '/tmp/lotti/habit2.png'
 - pressOn: 'Save Habit'
 
+- pressOn: 'Add Habit'
+- pressOn: 'Habit name field'
+- writeText: '10K+ Steps'
+- pressOn: 'Select category'
+- pressOn: 'Fitness'
+- pressOn: 'Habit priority'
+- takeScreenshot: '/tmp/lotti/habit3.png'
+- pressOn: 'Save Habit'
+
 - pressOn: 'Habits Tab'
 - takeScreenshot: '/tmp/lotti/habits.png'
+
+- pressOn: 'Complete Floss AM'
+- pressOn: 'Fail'
+
+- pressOn: 'Complete Floss PM'
+- pressOn: 'Success'
+
+- pressOn: 'Complete 10K+ Steps'
+- pressOn: 'Success'
