--- a/.github/workflows/fluttium-test.yml
+++ b/.github/workflows/fluttium-test.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Update apt-get
         run: sudo apt-get update
       - name: Install libraries
-        run: sudo apt-get install network-manager ninja-build
+        run: sudo apt-get install libgtk-3-dev cmake cmake-doc ninja-build libsecret-1-dev libjsoncpp-dev libsecret-1-0 sqlite3 libsqlite3-dev keybinder-3.0 network-manager
       - uses: actions/checkout@v3
       - uses: subosito/flutter-action@v2
         with:
