--- a/.github/workflows/flutter-test.yml
+++ b/.github/workflows/flutter-test.yml
@@ -20,5 +20,5 @@ jobs:
           flutter-version: '3.7.10'
           channel: 'stable'
       - name: Run Flutter tests
-        run: make clean_test
+        run: make l10n test
       - uses: codecov/codecov-action@v3
