--- a/.github/workflows/fluttium-test.yml
+++ b/.github/workflows/fluttium-test.yml
@@ -19,6 +19,8 @@ jobs:
         with:
           flutter-version: '3.7.10'
           channel: 'stable'
+      - name: Enable Linux Desktop
+        run: flutter config --enable-linux-desktop
       - name: Run l10n generation
         run: make l10n
       - name: Run Fluttium tests
