--- a/.github/workflows/fluttium-windows.yml
+++ b/.github/workflows/fluttium-windows.yml
@@ -30,5 +30,5 @@ jobs:
         run: flutter build windows
       - name: Flutter activate Fluttium
         run: flutter pub global activate fluttium_cli
-      - name: Flutter activate Fluttium
+      - name: Run Fluttium
         run: fluttium test test_flows/habit_flow.yaml --flavor production --target lib/main.dart
