--- a/.github/workflows/fluttium-mac.yml
+++ b/.github/workflows/fluttium-mac.yml
@@ -15,9 +15,7 @@ jobs:
         with:
           flutter-version: '3.7.10'
           channel: 'stable'
-      - name: Enable Linux Desktop
-        run: flutter config --enable-linux-desktop
       - name: Run l10n generation
         run: make l10n
       - name: Run Fluttium tests
-        run: make fluttium_production
+        run: make fluttium
