--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -32,7 +32,7 @@ steps:
           - "apple_deps"
         commands:
           - "rsync -ar /tmp/buildkite/${BUILDKITE_COMMIT}/ ./"
-          - "flutter pub run build_runner build --delete-conflicting-outputs"
+          - "flutter gen_l10n"
           - "rsync -ar ./ /tmp/buildkite/${BUILDKITE_COMMIT}/"
         agents:
           os: "macOS"
@@ -118,6 +118,22 @@ steps:
         retry:
           automatic:
             - exit_status: 24
+
+  #################
+
+  - label: ":mac: Fluttium 🔬 "
+    key: "fluttium"
+    depends_on:
+      - "apple_codegen"
+    commands:
+      - "rsync -ar /tmp/buildkite/${BUILDKITE_COMMIT}/ ./"
+      - "make fluttium"
+      - "rsync -ar ./ /tmp/buildkite/${BUILDKITE_COMMIT}/"
+    agents:
+      os: "macOS"
+    retry:
+      automatic:
+        - exit_status: 24
 
   #################
 
