--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -127,6 +127,7 @@ steps:
       - "apple_codegen"
     commands:
       - "rsync -ar /tmp/buildkite/${BUILDKITE_COMMIT}/ ./"
+      - trash ~/Library/Containers/com.matthiasn.lotti.dev/
       - "make fluttium"
       - "rsync -ar ./ /tmp/buildkite/${BUILDKITE_COMMIT}/"
     agents:
