--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: A Smart Journal.
 publish_to: 'none'
-version: 0.9.321+1994
+version: 0.9.321+1995
 
 msix_config:
   display_name: LottiApp
@@ -174,6 +174,9 @@ flutter_icons:
   android: true
   ios: false
   image_path: "assets/icon/app_icon_1024.png"
+  macos:
+    generate: true
+    image_path: "assets/icon/app_icon_1024_mac.png"
 
 analyzer:
   plugins:
