--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -80,6 +80,7 @@ steps:
       - touch ~/Library/Containers/com.matthiasn.lotti.dev
       - trash ~/Library/Containers/com.matthiasn.lotti.dev
       - "make fluttium"
+      - "make fluttium_docs"
       - "rsync -ar ./ /tmp/buildkite/${BUILDKITE_COMMIT}/"
     agents:
       os: "macOS"
