Manual for creating habits & screenshots in Fluttium test flow

--- a/test_flows/habit_flow.yaml
+++ b/test_flows/habit_flow.yaml
@@ -2,6 +2,7 @@ description: Simple habit flow
 ---
 - pressOn: 'Settings Tab'
 - pressOn: 'Category Management'
+- takeScreenshot: '/tmp/lotti/categories_empty.png'
 
 - pressOn: 'Add Category'
 - pressOn: 'Category name field'
