--- a/test_flows/habit_flow.yaml
+++ b/test_flows/habit_flow.yaml
@@ -1,17 +1,17 @@
-description: Simple habit flow
+description: Habit flow
 ---
 - pressOn: 'Settings Tab'
 - pressOn: 'Category Management'
-- takeScreenshot: '/tmp/lotti/categories_empty.png'
+- takeScreenshot: './screenshots/categories_empty.png'
 
 - pressOn: 'Add Category'
 - pressOn: 'Category name field'
 - writeText: 'Health'
 - pressOn: 'Select color'
 - writeText: '#20923C'
-- takeScreenshot: '/tmp/lotti/category_health.png'
+- takeScreenshot: './screenshots/category_health.png'
 - pressOn: 'Pick color'
-- takeScreenshot: '/tmp/lotti/category_health_picker.png'
+- takeScreenshot: './screenshots/category_health_picker.png'
 - pressOn:
     offset: [5.0, 5.0]
 - pressOn: 'Save Category'
@@ -44,18 +44,18 @@ description: Simple habit flow
 - writeText: '#2D5FB2'
 - pressOn: 'Save Category'
 
-- takeScreenshot: '/tmp/lotti/categories.png'
+- takeScreenshot: './screenshots/categories.png'
 
 - pressOn: 'Navigate back'
 - pressOn: 'Habit Management'
-- takeScreenshot: '/tmp/lotti/habits_empty.png'
+- takeScreenshot: './screenshots/habits_empty.png'
 
 - pressOn: 'Add Habit'
 - pressOn: 'Habit name field'
 - writeText: 'Floss AM'
 - pressOn: 'Select category'
 - pressOn: 'Dental Health'
-- takeScreenshot: '/tmp/lotti/habit1.png'
+- takeScreenshot: './screenshots/habit1.png'
 - pressOn: 'Save Habit'
 
 - pressOn: 'Add Habit'
@@ -64,18 +64,18 @@ description: Simple habit flow
 - pressOn: 'Select category'
 - pressOn: 'Dental Health'
 - pressOn: 'Habit priority'
-- takeScreenshot: '/tmp/lotti/habit2.png'
+- takeScreenshot: './screenshots/habit2.png'
 - pressOn: 'Save Habit'
 
 - pressOn: 'Add Habit'
 - pressOn: 'Habit name field'
 - writeText: '10K+ Steps'
-- takeScreenshot: '/tmp/lotti/habit3_initial.png'
+- takeScreenshot: './screenshots/habit3_initial.png'
 - pressOn: 'Select category'
-- takeScreenshot: '/tmp/lotti/habit3_category.png'
+- takeScreenshot: './screenshots/habit3_category.png'
 - pressOn: 'Fitness'
 - pressOn: 'Habit priority'
-- takeScreenshot: '/tmp/lotti/habit3_final.png'
+- takeScreenshot: './screenshots/habit3_final.png'
 - pressOn: 'Save Habit'
 
 - pressOn: 'Add Habit'
@@ -84,7 +84,7 @@ description: Simple habit flow
 - pressOn: 'Select category'
 - pressOn: 'Sleep'
 - pressOn: 'Habit priority'
-- takeScreenshot: '/tmp/lotti/habit4.png'
+- takeScreenshot: './screenshots/habit4.png'
 - pressOn: 'Save Habit'
 
 - pressOn: 'Add Habit'
@@ -92,13 +92,13 @@ description: Simple habit flow
 - writeText: 'Running 👟'
 - pressOn: 'Select category'
 - pressOn: 'Fitness'
-- takeScreenshot: '/tmp/lotti/habit5.png'
+- takeScreenshot: './screenshots/habit5.png'
 - pressOn: 'Save Habit'
 
-- takeScreenshot: '/tmp/lotti/habits.png'
+- takeScreenshot: './screenshots/habits.png'
 
 - pressOn: 'Habits Tab'
-- takeScreenshot: '/tmp/lotti/habit_completions1.png'
+- takeScreenshot: './screenshots/habit_completions1.png'
 
 - pressOn: 'Complete Floss AM -6'
 - pressOn: 'Success'
@@ -197,10 +197,10 @@ description: Simple habit flow
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps -1'
-- takeScreenshot: '/tmp/lotti/habit_completion_10k_steps.png'
+- takeScreenshot: './screenshots/habit_completion_10k_steps.png'
 - pressOn: 'Fail'
 
-- takeScreenshot: '/tmp/lotti/habit_completion_10k_all.png'
+- takeScreenshot: './screenshots/habit_completion_10k_all.png'
 
 - pressOn: 'Complete Running 👟 -10'
 - pressOn: 'Success'
@@ -232,13 +232,13 @@ description: Simple habit flow
 - pressOn: 'Complete Running 👟 -1'
 - pressOn: 'Skip'
 
-- takeScreenshot: '/tmp/lotti/habit_completions2.png'
+- takeScreenshot: './screenshots/habit_completions2.png'
 
 - pressOn: 'Complete Floss PM'
 - pressOn: 'Success'
 
 - pressOn: 'Complete 10K+ Steps'
-- takeScreenshot: '/tmp/lotti/habit_completion_10k_steps_now.png'
+- takeScreenshot: './screenshots/habit_completion_10k_steps_now.png'
 - pressOn: 'Success'
 
 - pressOn: 'Complete Running 👟'
@@ -246,11 +246,13 @@ description: Simple habit flow
 
 - pressOn: 'Habits - done'
 
-- takeScreenshot: '/tmp/lotti/habit_completions_done.png'
+- takeScreenshot: './screenshots/habit_completions_done.png'
 
 - pressOn: 'Settings Tab'
+- pressOn: 'Settings Tab'
+
 - pressOn: 'Measurable Data Types'
-- takeScreenshot: '/tmp/lotti/measurables_empty.png'
+- takeScreenshot: './screenshots/measurables_empty.png'
 
 - pressOn: 'Add Measurable'
 - pressOn: 'Measurable - name field'
@@ -259,7 +261,7 @@ description: Simple habit flow
 - writeText: "I'm a person who always stays hydrated."
 - pressOn: 'Measurable - unit name field'
 - writeText: 'ml'
-- takeScreenshot: '/tmp/lotti/measurable_water.png'
+- takeScreenshot: './screenshots/measurable_water.png'
 - pressOn:
       offset: [5.0, 5.0]
 - pressOn: 'Save Measurable'
@@ -271,7 +273,7 @@ description: Simple habit flow
 - writeText: "I'm a person who drinks reasonable amounts of coffee."
 - pressOn: 'Measurable - unit name field'
 - writeText: 'ml'
-- takeScreenshot: '/tmp/lotti/measurable_coffee.png'
+- takeScreenshot: './screenshots/measurable_coffee.png'
 - pressOn:
       offset: [5.0, 5.0]
 - pressOn: 'Save Measurable'
@@ -281,7 +283,7 @@ description: Simple habit flow
 - writeText: 'Pull-Ups'
 - pressOn: 'Measurable - unit name field'
 - writeText: 'reps'
-- takeScreenshot: '/tmp/lotti/measurable_pull_ups.png'
+- takeScreenshot: './screenshots/measurable_pull_ups.png'
 - pressOn:
       offset: [5.0, 5.0]
 - pressOn: 'Save Measurable'
@@ -291,7 +293,7 @@ description: Simple habit flow
 - writeText: 'Push-Ups'
 - pressOn: 'Measurable - unit name field'
 - writeText: 'reps'
-- takeScreenshot: '/tmp/lotti/measurable_push_ups.png'
+- takeScreenshot: './screenshots/measurable_push_ups.png'
 - pressOn:
       offset: [5.0, 5.0]
 - pressOn: 'Save Measurable'
@@ -301,25 +303,25 @@ description: Simple habit flow
 - writeText: 'Sit-Ups'
 - pressOn: 'Measurable - unit name field'
 - writeText: 'reps'
-- takeScreenshot: '/tmp/lotti/measurable_sit_ups.png'
+- takeScreenshot: './screenshots/measurable_sit_ups.png'
 - pressOn:
       offset: [5.0, 5.0]
 - pressOn: 'Save Measurable'
 
-- takeScreenshot: '/tmp/lotti/measurables.png'
+- takeScreenshot: './screenshots/measurables.png'
 
 - pressOn: 'Settings Tab'
 - pressOn: 'Dashboard Management'
-- takeScreenshot: '/tmp/lotti/dashboards_empty.png'
+- takeScreenshot: './screenshots/dashboards_empty.png'
 
 - pressOn: 'Add Dashboard'
 - pressOn: 'Dashboard - name field'
 - writeText: 'Exercise'
 - pressOn: 'Dashboard - description field'
 - writeText: "I'm a person who exercises, as shown in this dashboard."
-- takeScreenshot: '/tmp/lotti/dashboard_exercise.png'
+- takeScreenshot: './screenshots/dashboard_exercise.png'
 - pressOn: 'Select category'
-- takeScreenshot: '/tmp/lotti/dashboard_exercise_category.png'
+- takeScreenshot: './screenshots/dashboard_exercise_category.png'
 - pressOn: 'Fitness'
 - pressOn:
       offset: [5.0, 5.0]
@@ -327,13 +329,13 @@ description: Simple habit flow
 - pressOn: 'Push-Ups'
 - pressOn: 'Pull-Ups'
 - pressOn: 'Sit-Ups'
-- takeScreenshot: '/tmp/lotti/dashboard_exercise2.png'
+- takeScreenshot: './screenshots/dashboard_exercise2.png'
 - pressOn: 'OK'
-- takeScreenshot: '/tmp/lotti/dashboard_exercise3.png'
+- takeScreenshot: './screenshots/dashboard_exercise3.png'
 - pressOn: 'Save Dashboard'
 
-- takeScreenshot: '/tmp/lotti/dashboards.png'
+- takeScreenshot: './screenshots/dashboards.png'
 
 - pressOn: 'Dashboards Tab'
 
-- takeScreenshot: '/tmp/lotti/dashboards_tab.png'
+- takeScreenshot: './screenshots/dashboards_tab.png'
