--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lotti
 description: Achieve your goals and keep your data private with Lotti.
 publish_to: 'none'
-version: 0.9.330+2028
+version: 0.9.330+2030
 
 msix_config:
   display_name: LottiApp
@@ -138,6 +138,7 @@ dependencies:
   tuple: ^2.0.0
   url_launcher: ^6.1.2
   uuid: ^3.0.4
+  vector_graphics: 1.1.5
   visibility_detector: ^0.4.0+2
   wechat_assets_picker: ^8.4.1
   week_of_year: ^2.0.0
